Specifications about python installation and deps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: etibualuc
+    volumes: ./ressources/ :/ressourcesSQL
 
   adminer:
     image: adminer
